--- a/course-slides/session-1/knitted/session-1-presentation.html
+++ b/course-slides/session-1/knitted/session-1-presentation.html
@@ -233,7 +233,7 @@ slide:not(.current) .plotly.html-widget{
 
 <p>We will be using <strong>Rstudio</strong> to communicate with R.</p>
 
-<p><img class="class" id="id" width="200," height="100px" src='https://upload.wikimedia.org/wikipedia/commons/d/d0/RStudio_logo_flat.svg' title=''/> <img class="class" id="id" width="500" height="100px" src='https://cran.r-project.org/Rlogo.svg' title=''/></p>
+<p><img height="100px" width="200," id="id" class="class" src='https://upload.wikimedia.org/wikipedia/commons/d/d0/RStudio_logo_flat.svg' title=''/> <img height="100px" width="500" id="id" class="class" src='https://cran.r-project.org/Rlogo.svg' title=''/></p>
 
 <p>You should already have downloaded and installed <strong>both R and Rstudio</strong>. You need both to follow the exercises. The only program you will ever need to launch in to launch is <strong>Rstudio</strong>.</p>
 
@@ -250,8 +250,8 @@ slide:not(.current) .plotly.html-widget{
 <li><strong>Objects</strong>: What goes in and what comes out</li>
 </ul>
 
-<div id="htmlwidget-f76bf5e4acf74d769c6f" style="width:720px;height:432px;" class="grViz html-widget"></div>
-<script type="application/json" data-for="htmlwidget-f76bf5e4acf74d769c6f">{"x":{"diagram":"\ndigraph dot {\ngraph [layout = dot, rankdir = LR]\n  \nnode [shape = rectangle, style = filled, color = grey, fillcolor = grey]\n  a1 [label = Object]\n  a2 [label = Object]\n  a3 [label = Object]\n  c [label = Object]\n  \nnode [shape = oval, fillcolor = orange]\n  b [label = Function]\n  \nedge [color = grey]\na1,a2,a3 -> b -> c\n\n\n\n  \n}\n\n","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script>
+<div id="htmlwidget-79426315958f13dca512" style="width:720px;height:432px;" class="grViz html-widget"></div>
+<script type="application/json" data-for="htmlwidget-79426315958f13dca512">{"x":{"diagram":"\ndigraph dot {\ngraph [layout = dot, rankdir = LR]\n  \nnode [shape = rectangle, style = filled, color = grey, fillcolor = grey]\n  a1 [label = Object]\n  a2 [label = Object]\n  a3 [label = Object]\n  c [label = Object]\n  \nnode [shape = oval, fillcolor = orange]\n  b [label = Function]\n  \nedge [color = grey]\na1,a2,a3 -> b -> c\n\n\n\n  \n}\n\n","config":{"engine":"dot","options":null}},"evals":[],"jsHooks":[]}</script>
 
 </article></slide><slide class=""><hgroup><h2>Objects</h2></hgroup><article  id="objects">
 
