--- a/course-slides/session-1/knitted/session-1-presentation.html
+++ b/course-slides/session-1/knitted/session-1-presentation.html
@@ -229,7 +229,7 @@ slide:not(.current) .plotly.html-widget{
 
 <p>We will be using <strong>Rstudio</strong> to communicate with R.</p>
 
-<p><img width="200," height="100px" class="class" id="id" src='https://upload.wikimedia.org/wikipedia/commons/d/d0/RStudio_logo_flat.svg' title=''/> <img width="500" height="100px" class="class" id="id" src='https://cran.r-project.org/Rlogo.svg' title=''/></p>
+<p><img width="200," id="id" height="100px" class="class" src='https://upload.wikimedia.org/wikipedia/commons/d/d0/RStudio_logo_flat.svg' title=''/> <img width="500" id="id" height="100px" class="class" src='https://cran.r-project.org/Rlogo.svg' title=''/></p>
 
 <p>You should already have downloaded and installed <strong>both R and Rstudio</strong>. You need both to follow the exercises. The only program you will ever need to launch in to launch is <strong>Rstudio</strong>.</p>
 
