again hopefully working

--- a/course/session-1/knitted/session-1-slides.html
+++ b/course/session-1/knitted/session-1-slides.html
@@ -233,7 +233,7 @@ slide:not(.current) .plotly.html-widget{
 
 <p>We will be using <strong>Rstudio</strong> to communicate with R.</p>
 
-<p><img height="100px" class="class" id="id" width="200," src='https://upload.wikimedia.org/wikipedia/commons/d/d0/RStudio_logo_flat.svg' title=''/> <img height="100px" class="class" id="id" width="500" src='https://cran.r-project.org/Rlogo.svg' title=''/></p>
+<p><img width="200," height="100px" id="id" class="class" src='https://upload.wikimedia.org/wikipedia/commons/d/d0/RStudio_logo_flat.svg' title=''/> <img width="500" height="100px" id="id" class="class" src='https://cran.r-project.org/Rlogo.svg' title=''/></p>
 
 <p>You should already have downloaded and installed <strong>both R and Rstudio</strong>. You need both to follow the exercises. The only program you will ever need to launch is <strong>Rstudio</strong>.</p>
 
