--- a/course/session-3/knitted/session-2-slides.html
+++ b/course/session-3/knitted/session-2-slides.html
@@ -178,17 +178,179 @@ slide:not(.current) .plotly.html-widget{
 
 <slide class=""><hgroup><h2>Feedback assignment 2</h2></hgroup><article  id="feedback-assignment-2">
 
-<pre class = 'prettyprint lang-r'>vegdata[complete.cases(vegdata),] # doens&#39;t do anything
-# vs
-vegdata &lt;- vegdata[complete.cases(vegdata), ] # this does
+<ul>
+<li>Deadline is wednesday at noon</li>
+<li>First step is data exploration, which includes removing outliers</li>
+<li>A legend should have an understandable title: &ldquo;Vegetation types&rdquo; instead of &ldquo;Vegtype&rdquo;</li>
+<li><code>ggplot</code> have themes to change background and overall look</li>
+<li>Saving plots can be done using a function, or using the RStudio interface</li>
+</ul>
 
+</article></slide><slide class=""><hgroup><h2>Dates</h2></hgroup><article  id="dates">
 
-identify(vegdata$Elevation) #the rows containing the outliers are row 14 and 98
-#row 14 and 98 should be deleted and the new dataframe should be named differently
-my_df_2 &lt;- my_df_1[-c(14,98), ]
+<pre class = 'prettyprint lang-r'># Load in the data
+library(edcpR)
+data(vegdata_a2,  package = &quot;edcpR&quot;)
+dates &lt;- vegdata_a2$Date
+dates</pre>
 
-#vs
-my_df_2 &lt;- my_df_1[!my_df_1$Elevation&gt;150,]</pre>
+<pre >##   [1] &quot;8.07.2019&quot;  &quot;16.07.2019&quot; &quot;9.07.2019&quot;  &quot;16.07.2019&quot; &quot;1.07.2019&quot; 
+##   [6] &quot;1.07.2019&quot;  &quot;1.07.2019&quot;  &quot;2.07.2019&quot;  &quot;2.07.2019&quot;  &quot;2.07.2019&quot; 
+##  [11] &quot;2.07.2019&quot;  &quot;2.07.2019&quot;  &quot;2.07.2019&quot;  &quot;3.07.2019&quot;  &quot;3.07.2019&quot; 
+##  [16] &quot;3.07.2019&quot;  &quot;3.07.2019&quot;  &quot;3.07.2019&quot;  &quot;4.07.2019&quot;  &quot;4.07.2019&quot; 
+##  [21] &quot;4.07.2019&quot;  &quot;5.07.2019&quot;  &quot;5.07.2019&quot;  &quot;5.07.2019&quot;  &quot;5.07.2019&quot; 
+##  [26] &quot;5.07.2019&quot;  &quot;5.07.2019&quot;  &quot;8.07.2019&quot;  &quot;8.07.2019&quot;  &quot;8.07.2019&quot; 
+##  [31] &quot;8.07.2019&quot;  &quot;8.07.2019&quot;  &quot;9.07.2019&quot;  &quot;9.07.2019&quot;  &quot;9.07.2019&quot; 
+##  [36] &quot;9.07.2019&quot;  &quot;10.07.2019&quot; &quot;10.07.2019&quot; &quot;10.07.2019&quot; &quot;10.07.2019&quot;
+##  [41] &quot;10.07.2019&quot; &quot;11.07.2019&quot; &quot;11.07.2019&quot; &quot;11.07.2019&quot; &quot;11.07.2019&quot;
+##  [46] &quot;11.07.2019&quot; &quot;11.07.2019&quot; &quot;15.07.2019&quot; &quot;15.07.2019&quot; &quot;15.07.2019&quot;
+##  [51] &quot;15.07.2019&quot; &quot;15.07.2019&quot; &quot;15.07.2019&quot; &quot;16.07.2019&quot; &quot;16.07.2019&quot;
+##  [56] &quot;16.07.2019&quot; &quot;16.07.2019&quot; &quot;16.07.2019&quot; &quot;16.07.2019&quot; &quot;17.07.2019&quot;
+##  [61] &quot;17.07.2019&quot; &quot;17.07.2019&quot; &quot;17.07.2019&quot; &quot;17.07.2019&quot; &quot;18.07.2019&quot;
+##  [66] &quot;18.07.2019&quot; &quot;18.07.2019&quot; &quot;18.07.2019&quot; &quot;18.07.2019&quot; &quot;22/08/2019&quot;
+##  [71] &quot;23/08/2019&quot; &quot;22/08/2019&quot; &quot;23/08/2019&quot; &quot;27/08/2019&quot; &quot;27/08/2019&quot;
+##  [76] &quot;26/08/2019&quot; &quot;26/08/2019&quot; &quot;26/08/2019&quot; &quot;26/08/2019&quot; &quot;27/08/2019&quot;
+##  [81] &quot;28/08/2019&quot; &quot;28/08/2019&quot; &quot;28/08/2019&quot; &quot;28/08/2019&quot; &quot;28/08/2019&quot;
+##  [86] &quot;28/08/2019&quot; &quot;28/08/2019&quot; &quot;28/08/2019&quot; &quot;29/08/2019&quot; &quot;29/08/2019&quot;
+##  [91] &quot;29/08/2019&quot; &quot;29/08/2019&quot; &quot;28/08/2019&quot; &quot;29/08/2019&quot; &quot;29/08/2019&quot;
+##  [96] &quot;30/08/2019&quot; &quot;30/08/2019&quot; &quot;30/08/2019&quot; &quot;30/08/2019&quot; &quot;30/08/2019&quot;
+## [101] &quot;43505&quot;      &quot;43505&quot;      &quot;43505&quot;      &quot;43505&quot;      &quot;43505&quot;     
+## [106] &quot;43533&quot;      &quot;43533&quot;      &quot;43533&quot;      &quot;43533&quot;      &quot;43533&quot;     
+## [111] &quot;43533&quot;      &quot;43533&quot;      &quot;43533&quot;      &quot;43533&quot;      &quot;43564&quot;     
+## [116] &quot;43564&quot;      &quot;43564&quot;      &quot;43564&quot;      &quot;43564&quot;      &quot;43564&quot;     
+## [121] &quot;43564&quot;      &quot;43564&quot;      &quot;43747&quot;      &quot;43747&quot;      &quot;43747&quot;     
+## [126] &quot;43747&quot;      &quot;43747&quot;      &quot;43747&quot;      &quot;17/09/2019&quot; &quot;17/09/2019&quot;
+## [131] &quot;17/09/2019&quot; &quot;17/09/2019&quot; &quot;18/09/2019&quot; &quot;18/09/2019&quot; &quot;18/09/2019&quot;
+## [136] &quot;18/09/2019&quot; &quot;19/09/2019&quot; &quot;19/09/2019&quot; &quot;19/09/2019&quot; &quot;19/09/2019&quot;
+## [141] &quot;19/09/2019&quot; &quot;19/09/2019&quot; &quot;19/09/2019&quot; &quot;19/08/2019&quot;</pre>
+
+</article></slide><slide class=""><hgroup><h2>Dates</h2></hgroup><article  id="dates-1">
+
+<p>We have the following formats:</p>
+
+<ul>
+<li>&ldquo;11/03/2019&rdquo;</li>
+<li>&ldquo;11.03.2019&rdquo;</li>
+<li>&ldquo;43533&rdquo;</li>
+</ul>
+
+<p>One is not like the others: days since &ldquo;1899-12-30&rdquo; A numeric value takes up less storage space then a character string.</p>
+
+</article></slide><slide class=""><hgroup><h2>???</h2></hgroup><article  id="section">
+
+<p>Logical would be to choose the origin a &ldquo;1899-12-31&rdquo;. This would put &ldquo;1900-01-01&rdquo; as day one.</p>
+
+<p>&ldquo;Lotus 1-2-3&rdquo;, a predecessor of Excel: 1900 was a leap year</p>
+
+<p>It was not, making all their day counts wrong by one day.</p>
+
+<p>Microsoft noticed it was wrong, but used the format anyway and solved the problem by setting the origin at &ldquo;1899-12-30&rdquo;.</p>
+
+</article></slide><slide class=""><hgroup><h2>Numeric date formats</h2></hgroup><article  id="numeric-date-formats">
+
+<pre class = 'prettyprint lang-r'># Some numeric dates counting days from an origin
+as.numeric(dates) # Only gives dates that can be converted to a number, the rest is NA</pre>
+
+<pre >## Warning: NAs introduced by coercion</pre>
+
+<pre >##   [1]    NA    NA    NA    NA    NA    NA    NA    NA    NA    NA    NA    NA
+##  [13]    NA    NA    NA    NA    NA    NA    NA    NA    NA    NA    NA    NA
+##  [25]    NA    NA    NA    NA    NA    NA    NA    NA    NA    NA    NA    NA
+##  [37]    NA    NA    NA    NA    NA    NA    NA    NA    NA    NA    NA    NA
+##  [49]    NA    NA    NA    NA    NA    NA    NA    NA    NA    NA    NA    NA
+##  [61]    NA    NA    NA    NA    NA    NA    NA    NA    NA    NA    NA    NA
+##  [73]    NA    NA    NA    NA    NA    NA    NA    NA    NA    NA    NA    NA
+##  [85]    NA    NA    NA    NA    NA    NA    NA    NA    NA    NA    NA    NA
+##  [97]    NA    NA    NA    NA 43505 43505 43505 43505 43505 43533 43533 43533
+## [109] 43533 43533 43533 43533 43533 43533 43564 43564 43564 43564 43564 43564
+## [121] 43564 43564 43747 43747 43747 43747 43747 43747    NA    NA    NA    NA
+## [133]    NA    NA    NA    NA    NA    NA    NA    NA    NA    NA    NA    NA</pre>
+
+</article></slide><slide class=""><hgroup><h2>as.Date function</h2></hgroup><article  id="as.date-function">
+
+<p><code>as.Date()</code> creates a special data type: Date</p>
+
+<p>It can convert different formats as long as you give it the correct information. - Character date formats - Numeric date formats</p>
+
+</article></slide><slide class=""><hgroup><h2>Numeric date formats</h2></hgroup><article  id="numeric-date-formats-1">
+
+<pre class = 'prettyprint lang-r'># Convert them using appropriate origin
+format_1 &lt;- as.Date(as.numeric(dates), origin = &quot;1899-12-30&quot;)</pre>
+
+<pre >## Warning in as.Date(as.numeric(dates), origin = &quot;1899-12-30&quot;): NAs introduced by
+## coercion</pre>
+
+<pre class = 'prettyprint lang-r'>format_1</pre>
+
+<pre >##   [1] NA           NA           NA           NA           NA          
+##   [6] NA           NA           NA           NA           NA          
+##  [11] NA           NA           NA           NA           NA          
+##  [16] NA           NA           NA           NA           NA          
+##  [21] NA           NA           NA           NA           NA          
+##  [26] NA           NA           NA           NA           NA          
+##  [31] NA           NA           NA           NA           NA          
+##  [36] NA           NA           NA           NA           NA          
+##  [41] NA           NA           NA           NA           NA          
+##  [46] NA           NA           NA           NA           NA          
+##  [51] NA           NA           NA           NA           NA          
+##  [56] NA           NA           NA           NA           NA          
+##  [61] NA           NA           NA           NA           NA          
+##  [66] NA           NA           NA           NA           NA          
+##  [71] NA           NA           NA           NA           NA          
+##  [76] NA           NA           NA           NA           NA          
+##  [81] NA           NA           NA           NA           NA          
+##  [86] NA           NA           NA           NA           NA          
+##  [91] NA           NA           NA           NA           NA          
+##  [96] NA           NA           NA           NA           NA          
+## [101] &quot;2019-02-09&quot; &quot;2019-02-09&quot; &quot;2019-02-09&quot; &quot;2019-02-09&quot; &quot;2019-02-09&quot;
+## [106] &quot;2019-03-09&quot; &quot;2019-03-09&quot; &quot;2019-03-09&quot; &quot;2019-03-09&quot; &quot;2019-03-09&quot;
+## [111] &quot;2019-03-09&quot; &quot;2019-03-09&quot; &quot;2019-03-09&quot; &quot;2019-03-09&quot; &quot;2019-04-09&quot;
+## [116] &quot;2019-04-09&quot; &quot;2019-04-09&quot; &quot;2019-04-09&quot; &quot;2019-04-09&quot; &quot;2019-04-09&quot;
+## [121] &quot;2019-04-09&quot; &quot;2019-04-09&quot; &quot;2019-10-09&quot; &quot;2019-10-09&quot; &quot;2019-10-09&quot;
+## [126] &quot;2019-10-09&quot; &quot;2019-10-09&quot; &quot;2019-10-09&quot; NA           NA          
+## [131] NA           NA           NA           NA           NA          
+## [136] NA           NA           NA           NA           NA          
+## [141] NA           NA           NA           NA</pre>
+
+</article></slide><slide class=""><hgroup><h2>Character date formats</h2></hgroup><article  id="character-date-formats">
+
+<pre class = 'prettyprint lang-r'># Some character dates in two formats
+# see for symbols: https://devhints.io/datetime
+format_2 &lt;- as.Date(dates, format = &quot;%e.%m.%Y&quot;) # Only gives dates that fit format, rest is NA
+format_3 &lt;- as.Date(dates, format = &quot;%e/%m/%Y&quot;)
+
+head(format_2)</pre>
+
+<pre >## [1] &quot;2019-07-08&quot; &quot;2019-07-16&quot; &quot;2019-07-09&quot; &quot;2019-07-16&quot; &quot;2019-07-01&quot;
+## [6] &quot;2019-07-01&quot;</pre>
+
+</article></slide><slide class=""><hgroup><h2>Combining</h2></hgroup><article  id="combining">
+
+<pre class = 'prettyprint lang-r'># Populate a new vector with all non-NA values of the three formats
+conv_dates &lt;- format_1
+conv_dates[is.na(conv_dates)] &lt;- format_2[is.na(conv_dates)]
+conv_dates[is.na(conv_dates)] &lt;- format_3[is.na(conv_dates)]
+head(conv_dates) # all in the same format</pre>
+
+<pre >## [1] &quot;2019-07-08&quot; &quot;2019-07-16&quot; &quot;2019-07-09&quot; &quot;2019-07-16&quot; &quot;2019-07-01&quot;
+## [6] &quot;2019-07-01&quot;</pre>
+
+</article></slide><slide class=""><hgroup><h2>R uses a numeric date format</h2></hgroup><article  id="r-uses-a-numeric-date-format">
+
+<pre class = 'prettyprint lang-r'># Under the hood, R stores the dates as numeric values, but with origin &quot;1970-01-01&quot;
+head(conv_dates)</pre>
+
+<pre >## [1] &quot;2019-07-08&quot; &quot;2019-07-16&quot; &quot;2019-07-09&quot; &quot;2019-07-16&quot; &quot;2019-07-01&quot;
+## [6] &quot;2019-07-01&quot;</pre>
+
+<pre class = 'prettyprint lang-r'>head(as.numeric(conv_dates))</pre>
+
+<pre >## [1] 18085 18093 18086 18093 18078 18078</pre>
+
+<pre class = 'prettyprint lang-r'>head(as.Date(as.numeric(conv_dates), origin = &quot;1970-01-01&quot;))</pre>
+
+<pre >## [1] &quot;2019-07-08&quot; &quot;2019-07-16&quot; &quot;2019-07-09&quot; &quot;2019-07-16&quot; &quot;2019-07-01&quot;
+## [6] &quot;2019-07-01&quot;</pre>
 
 </article></slide><slide class="segue nobackground level1 fill" style="background-image: url(https://scx2.b-cdn.net/gfx/news/hires/2020/eatorbeeaten.jpg); background-size: cover; background-position: center;"><hgroup class = 'auto-fadein'><h2>Session 3: Diversity</h2></hgroup><article  id="session-3-diversity">
 
@@ -555,12 +717,12 @@ chao_BCI</pre>
 sample_BCI &lt;- rnorm(100, mean = chao_BCI, sd = chao_BCI_se)
 head(sample_BCI)</pre>
 
-<pre >## [1] 229.9847 242.8876 239.6228 238.2755 235.4769 230.2393</pre>
+<pre >## [1] 227.2500 233.2194 247.0177 241.5682 234.0448 229.7280</pre>
 
 <pre class = 'prettyprint lang-r'>sample &lt;- rnorm(100, mean = 280, sd = 11.5)
 head(sample)</pre>
 
-<pre >## [1] 268.4346 260.1237 295.2676 265.4998 265.2193 283.3291</pre>
+<pre >## [1] 270.6598 306.2775 275.0680 299.8842 278.4949 289.2982</pre>
 
 </article></slide><slide class=""><hgroup><h2>Calculate gamma diversity</h2></hgroup><article  id="calculate-gamma-diversity-3">
 
@@ -571,13 +733,13 @@ t.test(sample_BCI, sample)</pre>
 ##  Welch Two Sample t-test
 ## 
 ## data:  sample_BCI and sample
-## t = -31.237, df = 147.71, p-value &lt; 2.2e-16
+## t = -34.675, df = 155.92, p-value &lt; 2.2e-16
 ## alternative hypothesis: true difference in means is not equal to 0
 ## 95 percent confidence interval:
-##  -44.14735 -38.89389
+##  -46.25781 -41.27161
 ## sample estimates:
 ## mean of x mean of y 
-##  237.3515  278.8721</pre>
+##  236.8188  280.5835</pre>
 
 <pre class = 'prettyprint lang-r'>#p-value &lt; 0.05 --&gt; reject the zero-hypothesis --&gt; significant difference!
 #We lost species!</pre>
